tests/cpp/compile/expected/command_missing_index_buffer.txt
In file included from include/meta/../rhi/render_pass.hpp:9,
                 from include/meta/../rhi/device.hpp:7,
                 from include/meta/combinators.hpp:4,
                 from include/rcgp.hpp:11,
                 from tests/cpp/compile/fail/command_missing_index_buffer.cpp:3:
include/meta/command_normalization.hpp: In instantiation of ‘consteval auto rcgp::detail::normalize_step(Map, Indicators, Effect) [with Map = rcgp::Tlist<effect_entry<key_index<rcgp::Topology::eTriangleList>, tag_dep, no_bar> >; Indicators = rcgp::Tlist<>; Effect = rcgp::DependencySentinel]’:
include/meta/command_normalization.hpp:244:49:   required by substitution of ‘template<class Map, class Indicators, class Effect> using rcgp::detail::normalize_step_t = decltype (rcgp::detail::normalize_step(Map(), Indicators(), Effect())) [with Map = rcgp::Tlist<rcgp::detail::effect_entry<rcgp::detail::key_index<rcgp::Topology::eTriangleList>, rcgp::detail::tag_dep, rcgp::detail::no_bar> >; Indicators = rcgp::Tlist<>; Effect = rcgp::DependencySentinel]’
  244 | using normalize_step_t = decltype(normalize_step(Map(), Indicators(), Effect()));
      |                                   ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/meta/command_normalization.hpp:260:8:   recursively required from ‘struct rcgp::detail::normalize_fold<rcgp::Tlist<>, rcgp::Tlist<rcgp::detail::key_index<rcgp::Topology::eTriangleList> >, rcgp::DependencyEnforcerForIndexBuffer, rcgp::DependencySentinel>’
  260 |         using map = typename normalize_fold <next_map, next_indicators, Tail...> ::map;
      |               ^~~
include/meta/command_normalization.hpp:260:8:   required from ‘struct rcgp::detail::normalize_fold<rcgp::Tlist<>, rcgp::Tlist<>, rcgp::DependencyIndicatorForIndexBuffer<rcgp::Topology::eTriangleList>, rcgp::DependencyEnforcerForIndexBuffer, rcgp::DependencySentinel>’
include/meta/command_normalization.hpp:326:8:   required from ‘struct rcgp::detail::normalize_effects<rcgp::Tlist<rcgp::DependencyIndicatorForIndexBuffer<rcgp::Topology::eTriangleList>, rcgp::DependencyEnforcerForIndexBuffer, rcgp::DependencySentinel> >’
  326 |         using map = typename normalize_fold <Tlist <>, Tlist <>, Effects...> ::map;
      |               ^~~
include/meta/command_normalization.hpp:331:7:   required by substitution of ‘template<class List> using rcgp::detail::normalize_effects_t = typename rcgp::detail::normalize_effects::type [with List = rcgp::Tlist<rcgp::DependencyIndicatorForIndexBuffer<rcgp::Topology::eTriangleList>, rcgp::DependencyEnforcerForIndexBuffer, rcgp::DependencySentinel>]’
  331 | using normalize_effects_t = typename normalize_effects <List> ::type;
      |       ^~~~~~~~~~~~~~~~~~~
include/meta/commands.hpp:48:9:   required from ‘auto rcgp::operator|(const Commands<Effects>&, const Commands<Es ...>&) [with Es = {DependencyEnforcerForIndexBuffer, DependencySentinel}; Effects = {DependencyIndicatorForIndexBuffer<rcgp::Topology::eTriangleList>}]’
   48 |                 using normalized = detail::normalize_effects_t <combined>;
      |                       ^~~~~~~~~~
tests/cpp/compile/fail/command_missing_index_buffer.cpp:29:54:   required from here
   29 |         auto cmds = bind_pipeline(pipeline) | draw_indexed(3);
      |                                                             ^
include/meta/../rhi/../util/cti.hpp:15:45: error: static assertion failed: command recording has unresolved dependencies
   15 | #define static_error(sstring) static_assert(false, (sstring).view())
      |                                             ^~~~~
include/meta/command_normalization.hpp:198:25: note: in expansion of macro ‘static_error’
  198 |                         static_error("command recording has unresolved dependencies"_ss);
      |                         ^~~~~~~~~~~~
include/meta/../rhi/../util/cti.hpp:15:45: note: ‘false’ evaluates to false
   15 | #define static_error(sstring) static_assert(false, (sstring).view())
      |                                             ^~~~~
include/meta/command_normalization.hpp:198:25: note: in expansion of macro ‘static_error’
  198 |                         static_error("command recording has unresolved dependencies"_ss);
      |                         ^~~~~~~~~~~~
